Updates and Fixes

--- a/public/recipes/chipotle-red-potato-salad/index.html
+++ b/public/recipes/chipotle-red-potato-salad/index.html
@@ -8,10 +8,10 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="referrer" content="no-referrer">
-<meta name="description" content="Ingredient List    Quantity Ingredient     5 lb Red Potatoes, boiled, cooled, cut into pieces   1 1&frasl;2 Cups Whole Milk Greek Yogurt   4 Canned Chipotles in adobo sauce, finely diced   2 teaspoons oregano   2 teaspoons cumin   2 limes juiced   1 Red Onion Sliced Thin   1 Green Bell Pepper, Chopped   1 1&frasl;2 Cups Grape or Cherry Tomatoes, cut in half   Taste Salt and Pepper    Instructions  Combine lime juice, cumin, oregano, and chipotles in a small bowl.">
+<meta name="description" content="A red potato salad made with a chipotles, greek yogurt, and lime juice.">
 
 <meta property="og:title" content="Chipotle Red Potato Salad" />
-<meta property="og:description" content="Ingredient List    Quantity Ingredient     5 lb Red Potatoes, boiled, cooled, cut into pieces   1 1&frasl;2 Cups Whole Milk Greek Yogurt   4 Canned Chipotles in adobo sauce, finely diced   2 teaspoons oregano   2 teaspoons cumin   2 limes juiced   1 Red Onion Sliced Thin   1 Green Bell Pepper, Chopped   1 1&frasl;2 Cups Grape or Cherry Tomatoes, cut in half   Taste Salt and Pepper    Instructions  Combine lime juice, cumin, oregano, and chipotles in a small bowl." />
+<meta property="og:description" content="A red potato salad made with a chipotles, greek yogurt, and lime juice." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://michaelhealy.space/recipes/chipotle-red-potato-salad/" />
 
@@ -53,9 +53,9 @@
 
 
     
-    <link rel="stylesheet" href="/css/reset.css?t=2017-07-06%2016%3a07%3a19.919197382%20-0400%20EDT">
-    <link rel="stylesheet" href="/css/pygments.css?t=2017-07-06%2016%3a07%3a19.919197382%20-0400%20EDT">
-    <link rel="stylesheet" href="/css/main.css?t=2017-07-06%2016%3a07%3a19.919197382%20-0400%20EDT">
+    <link rel="stylesheet" href="/css/reset.css?t=2017-07-06%2016%3a22%3a45.562775561%20-0400%20EDT">
+    <link rel="stylesheet" href="/css/pygments.css?t=2017-07-06%2016%3a22%3a45.562775561%20-0400%20EDT">
+    <link rel="stylesheet" href="/css/main.css?t=2017-07-06%2016%3a22%3a45.562775561%20-0400%20EDT">
     
 
 
@@ -201,48 +201,48 @@
 </tr>
 
 <tr>
-<td>1 <sup>1</sup>&frasl;<sub>2</sub> Cups</td>
-<td>Whole Milk Greek Yogurt</td>
+<td>1 <sup>1</sup>&frasl;<sub>2</sub> cups</td>
+<td>Whole milk greek yogurt</td>
 </tr>
 
 <tr>
 <td>4</td>
-<td>Canned Chipotles in adobo sauce, finely diced</td>
+<td>Canned chipotles in adobo sauce, finely diced</td>
 </tr>
 
 <tr>
 <td>2 teaspoons</td>
-<td>oregano</td>
+<td>Oregano</td>
 </tr>
 
 <tr>
 <td>2 teaspoons</td>
-<td>cumin</td>
+<td>Cumin</td>
 </tr>
 
 <tr>
 <td>2</td>
-<td>limes juiced</td>
+<td>Limes juiced</td>
 </tr>
 
 <tr>
 <td>1</td>
-<td>Red Onion Sliced Thin</td>
+<td>Red onion sliced thin</td>
 </tr>
 
 <tr>
 <td>1</td>
-<td>Green Bell Pepper, Chopped</td>
+<td>Green bell pepper, chopped</td>
 </tr>
 
 <tr>
 <td>1 <sup>1</sup>&frasl;<sub>2</sub> Cups</td>
-<td>Grape or Cherry Tomatoes, cut in half</td>
+<td>Grape or cherry tomatoes, cut in half</td>
 </tr>
 
 <tr>
-<td>Taste</td>
-<td>Salt and Pepper</td>
+<td>To taste</td>
+<td>Salt and pepper</td>
 </tr>
 </tbody>
 </table>
@@ -250,9 +250,10 @@
 <h2 id="instructions">Instructions</h2>
 
 <ol>
-<li>Combine lime juice, cumin, oregano, and chipotles in a small bowl. Wisk to combine. Add Greek yogurt and stir until well incorporated.</li>
-<li>In a large bowl, combine potatoes, onions, and tomatoes. Stir to combine</li>
-<li>Add yogurt mixture to the potatoes, stir until well coated. Chill.</li>
+<li>Wisk together lime juice, cumin, oregano, and chipotles in a small bowl. Add Greek yogurt and stir until well incorporated.</li>
+<li>In a large bowl, combine potatoes, onions, and tomatoes.</li>
+<li>Add yogurt mixture to the potatoes, stir until well coated. Season to taste with salt and pepper.</li>
+<li>Chill.</li>
 </ol>
 
             </div>
